<resources>
    <string name="app_name">Desafio1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_promedio">Promedio</string>
    <string name="menu_salario">Salario</string>
    <string name="menu_calculadora">Calculadora</string>

    <string name="nombre">Nombre</string>
    <string name="Notas">Notas: </string>
    <string name="enviar">Enviar</string>
    <string name="promedio">Promedio: </string>
    <string name="Agregar">Agregar</string>
    <string name="Limpiar">Limpiar</string>
    <string name="Salario">Salario</string>
    <string name="Calcular">Calcular</string>

    <string name="Desafio">Desafio1</string>
    <string name="Alumno1">Marco Gerardo Serrano Lopez</string>
    <string name="Alumno2">Fernando Eriberto Ceron Lopez</string>

</resources>